src/components/exchange-history/ExchangeHistory.module.css
.gridItem {
  grid-column: 1 / span 6;
}

.wrapper {
  display: flex;
  position: relative;
}

.content > :not(:last-child) {
  margin-bottom: 35px;
}

.list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.list > :not(:last-child) {
  margin-bottom: 5px;
}

.btn {
  display: inline-block;
  background-color: #f6f6f5;
  border-radius: 50px;
  padding: 11px 60px;
}

.img {
  position: absolute;
  top: -295px;
  right: -15px;
}

@media (max-width: 1250px) {
  .wrapper {
    flex-direction: column;
  }

  .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .list {
    align-items: center;
  }

  .img {
    display: none;
  }

  .btn {
    text-align: center;
    padding: 11px 40px;
  }
}

